--- a/chutzpow.html
+++ b/chutzpow.html
@@ -46,8 +46,9 @@
 			<div class="context-summary">
 			<div class="context-title">Context</div>
 			Every IS major takes the Information Systems Consulting Project course during their Junior Spring. Through this course, students design and implement a usable information system for a client. My team worked with The Holocaust Center of Pittsburgh. 
-			<p>Located in Greenfield, the Holocaust Center is a multi-purpose hub for education, events, art, and more. Its mission is to inspire engagement with the history of the Holocaust and to connect with it today. </p> <p> The center provides sixteen different programs, ranging from speaker series to internships to short-term exhibits. Their visitors are mainly student groups who visit the center on  field trips as well as Holocaust survivors and the greater Jewish community. The Holocaust Center does not have a lack of programs; rather, they lack a platform to connect these programs and the physical space to carry out these programs. They want students to be able to engage with the material before, during, and after their visit, and they want teachers to be able to explore different perspectives when teaching about the Holocaust. Additionally, the Holocaust Center wants to be a resource both for people who visit in-person but also for those who cannot visit at all.</p>
-			<p>The tool we developed allows users to engage with the stories of the Holocaust through an interactive, online version of Chutz-Pow, the Holocaust Center's very own comic book series. It will tie together all of the resources the Holocaust Center has to offer, providing a cohesive platform for learning and engagement.</p>
+			<p>Located in Greenfield, the Holocaust Center is a multi-purpose hub for education, events, art, and more. Its mission is to inspire engagement with the history of the Holocaust and to connect with it today. </p> 
+			<p>The Holocaust Center does not lack of programs; rather, they lack a platform to connect these programs. They want students to be able to engage with the material before, during, and after their visit, and they want teachers to be able to explore different perspectives when teaching about the Holocaust. Additionally, the Holocaust Center wants to be a resource both for people who visit in-person but also for those who cannot visit at all.</p>
+			<p>The tool my team developed allows users to engage with the stories of the Holocaust through an interactive, online version of Chutz-Pow, the Holocaust Center's very own comic book series. It will tie together all of the resources the Holocaust Center has to offer, providing a cohesive platform for learning and engagement.</p>
 			</div>
 			
 			<div class="context-specifics">
@@ -73,18 +74,15 @@
 	  	<div class="process-overview">
 
 			<div class="process-title">Assessing Client Needs</div>
-			<div class="panel">
-			  <p>Before discussing any sort of solution with the client, we first focused on building a relationship with them and understanding the problems they are facing. After gaining a deep understanding of what the Holocaust Center does, we learned that Holocaust survivor stories are the most impactful and personal ways to communicate the horrors of the Holocaust. Holocaust survivor stories are important to Holocaust education because it puts a face and a real life story to the people that lived through the cruelty of the Nazi regime. Furthermore, a major problem in the contemporary Holocaust education is the aging of Holocaust survivors where they are no longer able to tell their stories and share their experiences with the world. To address this issue, the Center created Chutz-Pow, a comic book series, to tell the stories of Holocaust survivors with a younger audience in mind.</p>
+			<div class="panel caption-large">
+			  <p>Before discussing any sort of solution with the client, we first focused on building a relationship with them and understanding the problems they are facing. After gaining a deep understanding of what the Holocaust Center does, we learned that Holocaust survivor stories are the most impactful and personal ways to communicate the horrors of the Holocaust. </p>
+			  <p>Holocaust survivor stories are important to Holocaust education because they put a face and a real life story to the people that lived through the cruelty of the Nazi regime. Furthermore, a major problem in the contemporary Holocaust education is the aging of Holocaust survivors where they are no longer able to tell their stories and share their experiences with the world. To address this issue, the Center created Chutz-Pow, a comic book series, to tell the stories of Holocaust survivors with a younger audience in mind.</p>
 			  <p>Given the professional standard, historical accuracy and interactiveness of the series, “digitizing” this project was the perfect focus for an engaging and innovative educational platform that is unique to the Holocaust Center of Pittsburgh.</p>
 			</div>
 
 			<div class="process-title">Project Proposal</div>
-			<div class="panel">
-			  <p>We then delivered a proposal to the client:
-			  The tool we are proposing to develop allows users to engage with the stories of the Holocaust through an interactive, online version of Chutz-Pow. It will tie together all of the resources the Holocaust Center has to offer, providing a cohesive platform for learning and engagement. This platform will showcase the unique value of Chutz-Pow and allow students from all over the world to engage with Holocaust stories on a personal level. The platform we build will provide a streamlined user experience for the staff; adding resources (images, video clips, text, etc.) and uploading comic panels from Chutz-Pow will be a quick and easy process.</p>
-			  <p>Currently, most archives of Holocaust Survivor stories are not user friendly, and feel like they are just an interface for dealing with a database. The tool we are proposing makes every step of the process a user-friendly, thought-provoking experience, whether it is for the staff members uploading content or the readers.</p>
-			  <p>We plan to use modern web technologies to create an easy to use tool to develop responsive web pages telling the story of Holocaust Survivors through Chutz-Pow. The core principle of the application is that the data and the view are separatedso that data can easily be added to the system and without any work on the users end, a beautifully crafted experience for a reader is prepared through our adaptive technologies.</p>
-			  <p>Download the full proposal <a href="pics/chutzpow/proposal.pdf"> here.</a></p>
+			<div class="panel caption-large">
+			  <p>We then delivered a <a href="pics/chutzpow/proposal.pdf">proposal</a> to the client. In summary, the tool we develop will allow users to engage with the stories of the Holocaust through an interactive, online version of Chutz-Pow. It will tie together all of the resources the Holocaust Center has to offer, providing a cohesive platform for learning and engagement. This platform will showcase the unique value of Chutz-Pow and allow students from all over the world to engage with Holocaust stories on a personal level. The platform we build will provide a streamlined user experience for the staff; adding resources (images, video clips, text, etc.) and uploading comic panels from Chutz-Pow will be a quick and easy process.</p>
 			</div>
 
 			<div class="process-title">Use Cases</div>
@@ -144,7 +142,7 @@
 				<div class="pic-text-container">			  
 					<img class="med-pic" src="pics/chutzpow/wireframe2.png">
 					<div class="inner-text">
-						From that sketch, I converted the wireframe to a basic digital version using Adobe XD. I used grayscale, filler text, and simple shapes.
+						From that sketch, I converted the wireframe to a low fidelity digital version using Adobe XD. I used grayscale, filler text, and simple shapes.
 					</div>
 				</div>
 				
@@ -159,19 +157,9 @@
 				<div class="pic-text-container">
 					<img class="med-pic" src="pics/chutzpow/wireframe4.png">
 					<div class="inner-text">
-						This was the final wireframe. I stuck with the orange shade for the annotations panel and added more color to the sidebar nav. The comic strips themselves were in black and white, so some additional color was needed to make the interface more visually appealing. Action buttons were big and simple for ease of use.
+						This was the final wireframe. I stuck with the orange shade for the annotations panel and added more color to the sidebar nav. The comic strips themselves were in black and white, so some additional color was needed to make the interface more visually appealing. I kept action buttons large and simple for ease of use.
 					</div>
 				</div>
-			  
-			</div>
-
-			<div class="last">
-			<div class="process-title">Final Report</div>
-			<div class="panel">
-				<div class="text">
-				Last but not least, we summarized the project in a comprehensive final report, which I designed. Download the report <a href="pics/chutzpow/report.pdf"> here</a>. We also gave a final presentation for the entire IS class and each team's community partner.
-				</div>
-			</div>
 			</div>
 
 		  	<a href="newstagram.html" class="next-project" style="background-color: #18A398; float: right"> 
