--- a/miles.html
+++ b/miles.html
@@ -42,7 +42,7 @@
 	  	<div class="content">
 			<div class="context-summary">
 			<div class="context-title">Context</div>
-				The task was to design a conversational interface (e.g. Siri, Alexa) that would be integrated with a self driving car. The assignment was left very open-ended, and we had jurisdiction over specific users to target and areas to focus on.
+				I worked on this project through, Interaction Design Overview (IxDO), a core class of the HCI minor. IxDO is a studio course that offers a broad overview of communication and interaction design, through which students learn design methodologies such as brainstorming, sketching, storyboarding, wire framing, and prototyping. The task was to design a conversational interface (e.g. Siri, Alexa) that would integrate with a self driving car. The assignment was left very open-ended, and we had jurisdiction over specific users to target and areas to focus on.
 			</div>
 			<div class="context-specifics">
 				<div class="context-subtitle">Team</div>
@@ -51,11 +51,11 @@
 				</div>
 				<div class="context-subtitle">Skills</div> 
 				<div class="context-description">
-					User stories, Ecosystem collection, Competitive analysis, Scenarios, User testing
+					User stories, Ecosystem collection, Competitive analysis, Scenarios, Usability testing
 				</div>
 			</div>
 	  	</div>
-
+ 
 
 	  	<div class="process-overview">
 
@@ -164,11 +164,11 @@
 			  		</p> 
 			  	</div>
 			  	<div class="pic-with-caption">
-			  		<img src="pics/miles/prototyping.png" class="inline-pic">
+			  		<img src="pics/miles/prototyping.png" style="width:100%">
 			  		<i id="pic-caption">In-class prototyping session</i>
 			  	</div>
 			  	<div class="pic-with-caption">
-			  		<img src="pics/miles/feedback.jpeg" class="inline-pic">
+			  		<img src="pics/miles/feedback.jpeg" style="width:100%">
 			  		<i id="pic-caption">Feedback we recieved from classmates</i>
 			  	</div>
 			</div>
