--- a/zensors.html
+++ b/zensors.html
@@ -39,26 +39,25 @@
 	  	<div class="content">
 			<div class="context-summary">
 				<div class="context-title">Context</div>
-				<p>“Smart” appliances with built-in cameras, such as the NestCam and Amazon Echo Show, are becoming more pervasive. They hold the promise of bringing high fidelity, contextually rich sensing into our homes, workplaces and neighborhoods. Despite recent and impressive advances, computer vision sys-tems are still limited in the types of questions they can answer, and more importantly, do not immediately generalize acrossdiverse human environments. </p>
-				<p>In response, researchers have investigated hybrid crowd and AI-powered methods that collect human labels to bootstrap automatic processes. However,deployments have been small and mostly confined to institutional settings, leaving open questions about scalability and generality of the approach.</p>
-				<p>The current system relies on a crowdworker interface (similar to Mechanical Turk) for labeling images. The existing interface has several issues. First, there is no way to communicate what is wrong with an image or question when the crowdworker has low confidence. Second, the user gets very little feedback. Third, users are shown an entire uncropped (often low-quality) region of an image. </p>
-				<p>
-				In redesigning this interface, I wanted to address these issues and create a labeling interface that is simple to use, but also improves accuracy and speed of answering.</p>
-
+				<a href="https://www.zensors.com/">Zensors</a> is a startup that was born from a CMU HCI research project. I joined the team during my Junior spring as a UX Designer and Frontend Engineer.</p>
+        <p>
+        Zensors is a sensing platform that extracts data from existing camera feeds to help businesses and offices gain insight into what's going on in the spaces they own. It utilizes crowdsourcing and AI to answer questions about images. 
+        <p>When I came on board, the existing crowdsourcing interface had several issues surrounding lack of feedback and accuracy.
+				My role was to help redesign and re-build the crowd UI. In redesigning this interface, I wanted to address the aforementioned issues by creating a labeling interface that is simple to use, but also improves accuracy and speed of answering.</p>
 			</div>
 			
 			<div class="context-specifics">
 				<div class="context-subtitle">Team</div>
 					<div class="context-description">
-					I worked with several developers and designers, most of whom were HCI Masters/PHD students.
+					I worked with several developers and designers, most of whom were HCI Masters/PhD students.
 					</div>
 				<div class="context-subtitle">Skills</div> 
 				    <div class="context-description">
-					Personas, Scenarios, User Stories, Wireframing, Prototyping, User Testing
+					Personas, Scenarios, User Stories, Wireframing, Prototyping, Usability Testing
 					</div>
 				<div class="context-subtitle">Tools/Technology</div> 
 					<div class="context-description">
-					Adobe XD, Mechanical Turk, Reac, TypeScript, HTML/CSS
+					Adobe XD, React, TypeScript, HTML/CSS
 					</div>
 			</div>
 
@@ -93,7 +92,7 @@
         </div>
         <div>
         <br>
-          <b>As a requester (end-user), I want to know from the crowd...</b>
+          <b>As a requester (end-user), I want to...</b>
           <p>Get high quality labels with minimal cost, and low latency.</p>
           <p>When my questions are bad, let me know quickly.</p>
           <p>When creating questions, give me guidance.</p>
