--- a/newstagram.html
+++ b/newstagram.html
@@ -17,7 +17,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-119412150-1');
+      gtag('config', 'UA-119412150-1'); 
       
       // load other reused files
       $(function() {
@@ -43,8 +43,9 @@
 	  	<div class="content">
 			<div class="context-summary">
 			<div class="context-title">Context</div>
-			This was a project I worked on through Social Web, an elective HCI class that examines a sampling of the social, technical and business challenges social web sites must solve to be successful. <p>Through this project, we aimed to gain a deeper understanding of why and how people use Instagram, how authenticity plays into social media, and how best to design a social media platform so that users feel like they are posting authentically.</p>
-			<p>Instagram is intended to connect individuals, but more often that not, it is used to curate highly edited, illusory versions of themselves. People are not at fault for this. Rather, the platforms that enable and even promote this behavior are to blame.</p>
+			This was a project I worked on through Social Web, an elective HCI class that examines a sampling of the social, technical and business challenges social web sites must solve to be successful. 
+			<p>Through this project, my team aimed to gain a deeper understanding of why and how people use Instagram, how authenticity plays into social media, and how best to design a social media platform so that users feel like they are posting authentically.</p>
+			<p>The problem we identified is as follows: Instagram is intended to connect individuals, but more often that not, it is used to curate highly edited, illusory versions of themselves. People are not at fault for this. Rather, the platforms that enable and even promote this behavior are to blame.</p>
 			<p>
 			We specifically focused on redesigning Instagram to promote an authentic user experience. By doing so, we hope to create more open spaces, conducive to deeper connections, and more meaningful presentations of one’s self.
 			</p> 
@@ -56,7 +57,7 @@
 					<div class="context-description">
 					I worked in an interdisciplinary team of three: myself, another IS/HCI major, and a Business major.</div>
 				<div class="context-subtitle">Skills</div> 
-					<div class="context-description">Interviewing, Usability testing, Conducting Research, Wireframing, Prototyping, Presenting</div>
+					<div class="context-description">Interviewing, Usability testing, Wireframing, Prototyping, Presenting</div>
 				<div class="context-subtitle">Tools</div> 
 					<div class="context-description">Adobe XD, Google Slides</div>
 			</div>
@@ -68,9 +69,7 @@
 			<img class="pics-3" src="pics/newstagram/explore3.png">
 		</div>
 
-	  	<div class="process-title">Process</div>
-	  	<div class="panel">The process we laid out for this 6-week project is as follows: research, interviews, ideation, wireframing, usability testing, and prototyping. View the <a href="pics/newstagram/report.pdf">final report here</a>!</div>
-
+		<div class="margin-medium">
 		<div class="process-title">Research</div>
 		<div class="panel">
 		  <p>To better understand the psychology behind decision making on Instagram, and the influence of social media platforms as a context for user behavior, we read five research papers on these topics. The questions we were looking to answer were 'What are some problematic aspects of Instagram and social media?' and 'What is the psychology behind trends in social media consumption?'
@@ -101,17 +100,13 @@
 			</p>
 		</div>
 
-		<div class="process-title">Ideation</div>
-		<div class="panel">
-			After gathering all that insight, we spent a work session translating what we learned into concrete features. We translated this list to a set of screen flows.
-		</div>
-
 		<div class="process-title">Wireframes</div>
 		<div class="panel">
+			<p>After gathering all that insight, we spent a work session translating what we learned into concrete features. We translated this list to a set of screen flows.</p>
 			<p>In creating our initial wireframes, we thought carefully about the insights collected from our research. Originally, we had approached the project with a goal of making Instagram more “authentic” and less prone to the homogeneity and calculated nature of posts nowadays. However, the results of our interviews and our struggle to craft a definition of “authenticity” for us to build toward made it clear that “authenticity” meant different things for everyone.</p> 
 			<p>A user could be authentic in their passion for curating beautiful, quality posts while another could see unfiltered, candid photos as their ideal of authentic. An endeavor to de-emphasize the over-curation of photos might be against the wishes of our target market, and enacting such a wide cultural change might be infeasible. Thus, we evolved our end goal to focus on fostering an environment where users would feel comfortable expressing their truest selves and posting the content they want to post, whether it’s ultra-curated, completely unfiltered, or somewhere in between.
 		  	</p>
-		  	<img class="wireframe" src="pics/newstagram/wireframes.png">
+		  	<img style="width:100%" src="pics/newstagram/wireframes.png">
 		  	<p>
 		  	Our initial ideas centered around returning the focus of Instagram to user interests. We introduced the ideas of “circles”, which are user-curated groups of friends. We also created “streams”, allowing users to host multiple themed feeds, all in the same account. Furthermore, we recognized the idea that users might want to show different kinds of content to different friend circles, we made it so that users can designate which circles can see certain streams. We also took away indicators of social currency. Instead of showing amassed numbers for likes and followers, users would still receive notifications but would not be able to see the consolidated numbers. Finally, we revamped Instagram’s Explore page. Users had mentioned that they purposely avoided clicking on certain types of content to avoid seeing similar items pop up on their Explore page. Furthermore, they expressed frustration at the seeming lack of variety and the ineffectiveness of the current algorithm. Our changes made it possible to filter explore queries by geographic location, chronology, and keyword. 
 		  	</p>
@@ -129,11 +124,9 @@
 			<p>
 			Users also commented on the functionality of the explore page. Most of them enjoyed the different filtering methods and thought they were simple and effective. Although they thought it was a large improvement over the current explore page, they suggested combining current functions, like searching by tag and by location, to make the feature more powerful. 
 			</p>
-		</div>
 
-		<div class="process-title">Prototyping</div>
-		<div class="panel">
-			We incorporated the feedback we got into the prototype, which we created with Adobe XD. View the prototype <a href="https://adobe.ly/2FygOXL">here</a>.
+			<p>We incorporated the feedback we got into the prototype, which we created with Adobe XD. View the prototype <a href="https://adobe.ly/2FygOXL">here</a>.</p>
+		</div>
 		</div>
 
 		  	<a href="upark.html" class="next-project" style="background-color: #662C92; float: right"> 
