almost done with JH page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div id="home-text-title">EMILY</div>
           <div id="home-text-title">PORAT</div>
           <div id="home-text-description">
-            <p id="my-location"><i class="fa fa-map-marker"></i> Pittsburgh, PA</p>
-            <p>I am a senior at Carnegie Mellon University studying <a href="https://www.cmu.edu/information-systems/">Information Systems</a> and <a href="https://hcii.cmu.edu/">HCI</a>.</p>
+            <p id="my-location"><i class="fa fa-map-marker"></i> Washington, DC</p>
+            <p>I'm a UX Designer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a>, where we work with government agencies to modernize systems that matter.</p>
             <p id="mobile-optional">Spreadsheets are my secret weapon, I can't leave a meeting without a list of action items, and my room is weirdly clean at all times. I take pleasure in getting sh*t done, and my goal in all my work is to help people do exactly that.</p>
             <a href="resume.pdf" class="learn-about">Résumé</a>
           </div>
@@ -54,8 +54,27 @@
       <div id="projects" class="margin-med">
 
         <div id="featured projects">
+          
           <div class="project section" style="margin-top: 18vh">
           <div id="secondary-title">FEATURED PROJECTS</div>
+            <a href="justharvest.html"><img src="pics/" class="project-pic" style="opacity:1"></a>
+            <div class="caption">
+              <div class="project-title">Just Harvest Community Table</div>
+              [Text describing what I did for Just Harvest]
+              <a href="justharvest.html" class="learn-more" style="background-color: rgb(24,163,152); color: white"> LEARN MORE</a>
+            </div>
+          </div>
+
+        <div class="project section">
+          <a href="rsvpd.html"><img src="pics/" class="project-pic"></a>
+          <div class="caption">
+            <div class="project-title">RSVPd</div>
+            [Text describing RSVPd]
+            <a href="rsvpd.html" class="learn-more" style="background-color: #33312E; color: white"> LEARN MORE</a>
+          </div>
+        </div>
+
+          <div class="project section">
             <a href="l&d.html"><img  src="pics/l&d.jpg" class="project-pic" style="opacity:1"></a>
             <div class="caption">
               <div class="project-title">Learning & Development Portal</div>
@@ -64,28 +83,26 @@
             </div>
           </div>
 
-        <div class="project section">
-          <a href="zensors.html"><img src="pics/zensors.jpg" class="project-pic"></a>
-          <div class="caption">
-            <div class="project-title">Zensors</div>
-            Redesigned and developed the user interface for crowdworkers to answer questions about images captured from sensors. Wrote use cases and scenarios, drew wireframes, and developed frontend with React.
-            <a href="zensors.html" class="learn-more" style="background-color: #33312E; color: white"> LEARN MORE</a>
-          </div>
-        </div>
-
-          <div class="project section">
-            <a href="chutzpow.html"><img src="pics/hc.png" class="project-pic" style="opacity:1"></a>
-            <div class="caption">
-              <div class="project-title">Chutz-Pow</div>
-              Designed and developed a tool that allows users to engage with the stories of the Holocaust through an interactive, online version of ChutzPow, the Pittsburgh Holocaust Center's comic book series.
-              <a href="chutzpow.html" class="learn-more" style="background-color: rgb(24,163,152); color: white"> LEARN MORE</a>
-            </div>
-          </div>
-
         </div>
 
         <div id="secondary-title">MORE PROJECTS</div>
         <div id="secondary-projects">
+
+        <div class="section">
+          <a href="chutzpow.html"><img src="pics/hc.png" class="secondary-pic" style="opacity:1"></a>
+          <div class="secondary-caption">
+            <div class="project-title">Chutz-Pow!</div>
+              An interactive, online version of ChutzPow, the Pittsburgh Holocaust Center's comic book series.
+          </div>
+        </div>
+
+        <div class="section">
+          <a href="zensors.html"><img src="pics/zensors.jpg" class="secondary-pic" style="opacity:1"></a>
+          <div class="secondary-caption">
+            <div class="project-title">Zensors</div>
+              The user interface for crowdworkers to answer questions about images captured from sensors.
+          </div>
+        </div>
 
         <div class="section">
           <a href="newstagram.html"><img src="pics/newig.png" class="secondary-pic" style="opacity:1"></a>
